<resources>
    <string name="app_name">My Application</string>

    <!--   login page   -->
    <string name="hello">Hello!</string>
    <string name="enter_email_password">Enter your email and password below</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>

    <!--  sign-up page  -->
    <string name="signup_title">Let\'s get acquainted</string>
    <string name="signup_subtitle">Fill out the profile and go to the application!</string>
    <string name="signup_google">Google</string>
    <string name="signup_or">or</string>
    <string name="signup_register">Register</string>
    <string name="signup_terms">By clicking Register you agree to our Terms and Conditions</string>
    <string name="signup_have_account">Already have an account?</string>
    <string name="signup_sign_in">Sign in</string>

    <!-- my profile -->
    <string name="settings">Settings</string>
    <string name="user_name">Lucile Alvarado</string>
    <string name="mobile_phone" translatable="false">(264) 654-3...</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_profession">Graphic designer</string>
    <string name="user_address">5295 Gaylord Walks Apk. 110</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_contacts">View my contacts</string>
    <string name="log_out">Log out</string>
    <string name="profile_fill_hint">Go to settings and fill out the profile</string>

    <!-- contact's profile -->
    <string name="profile_text">Profile</string>
    <string name="message_text">Message</string>
    <string name="back">Back</string>

    <!--   login registration error text   -->
    <string name="email_error_text">Incorrect E-Mail address</string>
    <string name="blank_email_error_text">Email cannot be empty</string>
    <string name="password_error_text">Your password must include a minimum of %1$d characters.</string>
    <string name="user_name_error">User name must contain at least %1$d letters</string>
    <string name="phone_length_error">Phone must be at least  %1$d digits long</string>

    <!--   my contacts recycler view  -->
    <string name="contacts_text">Contacts</string>
    <string name="add_contacts_text">Add contacts</string>
    <string name="wastebasket_description">Wastebasket</string>
    <string name="deleted_contact_toast_text">Contact has been removed</string>
    <string name="return_contact_toast_text">undo</string>
    <string name="add_contacts_name">Name</string>
    <string name="add_contacts_position">Position</string>
    <string name="add_contacts_save_text">Save</string>
    <string name="add_contacts_cancel_text">Cancel</string>
    <string name="title">Your profile data</string>
    <string name="subtitle">Fill out the profile and go to the application!</string>
    <string name="button2">Forward</string>

    <string name="no_results_found_title">No results found</string>
    <string name="no_results_found_subtitle">You can see more contacts in the recommendation</string>

    <!--    tab text     -->
    <string name="tab_profile">My Profile</string>
    <string name="tab_contacts">Contacts</string>

    <!--    Gallery     -->
    <string name="open_gallery">Open gallery</string>
    <string name="delete_photo">Delete current photo</string>

    <!-- Edit Profile -->
    <string name="edit_profile_title">Edit profile</string>
    <string name="edit_profile_save">Save</string>

    <string name="edit_profile_username_label">Username</string>
    <string name="edit_profile_username_placeholder">Lucile Alvarado</string>

    <string name="edit_profile_career_label">Career</string>
    <string name="edit_profile_career_placeholder">Graphic designer</string>

    <string name="edit_profile_phone_label">Phone</string>
    <string name="edit_profile_phone_placeholder">(264)-654-3452</string>

    <string name="edit_profile_birthdate_label">Date of birth</string>
    <string name="edit_profile_birthdate_placeholder">12/05/1994</string>

    <string name="edit_profile_address_label">Home address</string>
    <string name="edit_profile_address_placeholder">5295 Gaylord Walks Apk. 110</string>

    <!--    Preview     -->
    <string name="filled_button_text">Filled Button Text</string>
    <string name="outlined_button_text">Outlined Button Text</string>

    <!--    AddContactsScreenContent     -->
    <string name="users_title">Users</string>
    <string name="users_title2">Recommendation</string>


    <!--    Other     -->
    <string name="unknown_error">Unknown error</string>
    <string name="login_failed">Login failed</string>
    <string name="logout_failed">Logout failed</string>
    <string name="contact_removed">Contact removed</string>
    <string name="failed_to_load_contacts">Failed to load contacts</string>
    <string name="failed_to_add_contact">"Failed to add contact"</string>
    <string name="contact_added">Contact added</string>
    <string name="failed_to_save_profile">Failed to save profile</string>
    <string name="failed_to_load_profile">"Failed to load profile"</string>
    <string name="add_to_my_contacts_text">Add to my contacts</string>
    <string name="toast_clicked">Button clicked</string>
    <string name="notification_text">Click to open profile of contact</string>


</resources>