<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <!-- Заголовок -->

    <!-- Подзаголовок -->

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Поле Email -->

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/enter_email_password"
        android:textColor="@color/grayText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <!-- Поле Password -->

    <EditText
        android:id="@+id/emailField"
        android:layout_width="336dp"
        android:layout_height="22dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText" />

    <!-- Чекбокс "Remember me" -->
    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailField" />

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/grayText2"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Ссылка "Forgot password?" -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/rememberMeCheckbox"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/button_border"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="610dp" />

    <TextView
        android:id="@+id/dontHaveAccountText"
        android:layout_width="137dp"
        android:layout_height="18dp"
        android:layout_marginStart="81dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/grayText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
