<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/signup_title"
        style="@style/Heading_24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:includeFontPadding="false"
        android:text="@string/signup_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_subtitle"
        style="@style/BodyText_12sp"
        android:layout_width="328dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup_subtitle"
        android:textAlignment="center"
        android:textColor="@color/grayText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/signup_subtitle">

        <TextView
            android:id="@+id/emailTextLabel"
            style="@style/Subheading_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/email"
            android:textColor="@color/grayText2" />

        <TextView
            android:id="@+id/emailErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/email_error_text"
            android:textColor="@android:color/holo_red_light"
            android:textSize="14sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/Heading_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/passwordTextLabel"
            style="@style/Subheading_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/password"
            android:textColor="@color/grayText2" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/Heading_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/Subheading_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/remember_me"
            android:textColor="@color/grayText2" />

    </LinearLayout>

    <Button
        android:id="@+id/googleLoginButton"
        style="@style/Subheading_16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signup_google"
        app:layout_constraintBottom_toTopOf="@+id/TextViewOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/TextViewOr"
        style="@style/Heading_18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/signup_or"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Subheading_16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/button_border"
        android:text="@string/signup_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/dontHaveAccountText"
        style="@style/BodyText_12sp"
        android:layout_width="265dp"
        android:layout_height="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="41dp"
        android:text="@string/signup_terms"
        android:textAlignment="center"
        android:textColor="@color/grayText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/alreadyHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/signup_have_account"
        android:textColor="@color/grayText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/signup_sign_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/alreadyHaveAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>