<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacer_medium"
    android:layout_marginTop="@dimen/spacer_small"
    android:background="?android:textColorPrimary"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/spacer_small">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="@dimen/contacts_avatar_size"
        android:layout_height="@dimen/contacts_avatar_size"
        android:background="@drawable/social_button_border"
        android:contentDescription="@string/user_avatar"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_avatar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_medium"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/SubheadingLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="?android:textColorTertiary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positionTextView"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profession"
            android:textColor="?android:textColorSecondary" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="19.46dp"
        android:layout_height="23dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/wastebasket_description"
        android:src="@drawable/recycle_bin" />
</LinearLayout>
