<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/signup_title"
        style="@style/HeadingLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/signup_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_subtitle"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_small"
        android:text="@string/signup_subtitle"
        android:textAlignment="center"
        android:textColor="@color/grayText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <include
        layout="@layout/common_login_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/googleLoginButton"
        style="@style/SubheadingLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_start"
        android:layout_marginEnd="@dimen/margin_button_end"
        android:text="@string/signup_google"
        app:layout_constraintBottom_toTopOf="@+id/TextViewOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/TextViewOr"
        style="@style/HeadingMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_or_text"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/signup_or"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        style="@style/SubheadingLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_button_start"
        android:layout_marginEnd="@dimen/margin_button_end"
        android:layout_marginBottom="@dimen/margin_button_bottom"
        android:background="@drawable/button_border"
        android:text="@string/signup_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/dontHaveAccountText"
        style="@style/BodyText"
        android:layout_width="@dimen/signup_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_texts"
        android:layout_marginBottom="@dimen/margin_between_buttons"
        android:text="@string/signup_terms"
        android:textAlignment="center"
        android:textColor="@color/grayText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/alreadyHaveAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_account_text_start"
        android:layout_marginEnd="@dimen/margin_account_text_end"
        android:layout_marginBottom="@dimen/margin_account_text_bottom"
        android:text="@string/signup_have_account"
        android:textColor="@color/grayText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUpText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signUpText"
        style="@style/SubheadingMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_signup_text_start"
        android:layout_marginBottom="@dimen/margin_signup_text_bottom"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/signup_sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/alreadyHaveAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>
