<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Heading_24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="48dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="113dp"
            android:layout_height="113dp"
            android:layout_marginTop="103dp"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_account_circle_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            style="@style/Heading_18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_profession"
            style="@style/Subheading_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_profession"
            android:textColor="@color/grayText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <TextView
            android:id="@+id/user_address"
            style="@style/Subheading_14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_address"
            android:textColor="@color/grayText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_profession" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageButton
        android:id="@+id/imageButtonFacebook"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/social_button_border"
        android:contentDescription="@string/facebook"
        android:foreground="@null"
        android:padding="15dp"
        android:scaleType="centerInside"
        android:src="@drawable/social_facebook"
        android:tint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageButton
        android:id="@+id/imageButtonInstagram"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/social_button_border"
        android:contentDescription="@string/instagram"
        android:padding="15dp"
        android:scaleType="centerInside"
        android:src="@drawable/social_instagram"
        android:tint="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/imageButtonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageButton
        android:id="@+id/imageButtonVK"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/social_button_border"
        android:contentDescription="@string/vk"
        android:padding="15dp"
        android:scaleType="centerInside"
        android:src="@drawable/social_vk"
        android:tint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <Button
        android:id="@+id/editProfileBtn"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_profile"
        android:background="@drawable/button_outlined"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/viewMyContactsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewMyContactsBtn"
        style="@style/Subheading_16sp"
        android:textColor="@color/white"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_contacts"
        android:background="@drawable/button_filled_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>